<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAF4E0"
    tools:context=".views.ChangePasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/main">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="164dp"
                    android:src="@drawable/img_circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:text="Thay đổi mật khẩu"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutBackPass"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/oval_btn_background_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/back2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/txtEmailAccount"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="T25@huce.edu.vn"
                android:textColor="@color/main"
                android:textSize="40sp"/>

            <EditText
                android:id="@+id/txtPasswordOld"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:ems="14"
                android:paddingLeft="20dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/input_bg"
                android:inputType="textPassword"
                android:hint="@string/txtPass"
                android:textColorHint="@color/colortxtlogin"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

            <EditText
                android:id="@+id/txtNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:ems="14"
                android:paddingLeft="20dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/input_bg"
                android:inputType="textPassword"
                android:hint="@string/txtNewPass"
                android:textColorHint="@color/colortxtlogin"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPhone" />


            <EditText
                android:id="@+id/txtReNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:ems="14"
                android:paddingLeft="20dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/input_bg"
                android:inputType="textPassword"
                android:hint="@string/txtReNewPass"
                android:textColorHint="@color/colortxtlogin"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNewPassword" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ContraintLayoutChangePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="16dp"
                android:onClick="onConstraintLayoutClick">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_write"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Chỉnh sửa mật khẩu"
                    android:textStyle="bold"
                    android:textColor="@color/main"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>