<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logoFilm"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_main_film" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLOGIN"
        android:textColor="@color/main"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoFilm" />

    <TextView
        android:id="@+id/txtbottomLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:text="By signing in you are agreeing our"
        android:textColor="@color/colortxtbottomlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <TextView
        android:id="@+id/txtbottomLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:text="Term and privacy policy"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbottomLogin" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="14"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:background="@drawable/input_bg"
        android:hint="@string/txtEmail"
        android:textColorHint="@color/colortxtlogin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbottomLogin2" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="14"
        android:paddingLeft="20dp"
        android:background="@drawable/input_bg"
        android:inputType="textPassword"
        android:hint="@string/txtPass"
        android:textColorHint="@color/colortxtlogin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtRememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:text="Remember Password"
        android:textColor="@color/colortxtbottomlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <CheckBox
        android:id="@+id/txtcheckPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:textColor="@color/colortxtbottomlogin"
        app:layout_constraintEnd_toStartOf="@+id/txtRememberPass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="@color/transparent"
        android:text="Forget Password"
        android:textColor="@color/colortxtbottomlogin"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/w_Login"
        android:layout_height="@dimen/h_Login"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_login"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="@dimen/txtSizeLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRememberPass" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/w_Login"
        android:layout_height="@dimen/h_Login"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_register"
        android:text="Register"
        android:textSize="@dimen/txtSizeLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/txtConnect"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="or connect with"
        android:textColor="@color/colortxtbottomlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_btn_facebook"
        android:drawableStart="@drawable/logo_face"
        android:paddingHorizontal="12dp"
        android:text=" Sign In With Facebook"
        android:textAllCaps="false"
        android:textColor="@color/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_google"
        android:drawableStart="@drawable/logo_google"
        android:paddingHorizontal="12dp"
        android:text=" Sign In With Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>